Removed token from example

--- a/{{ cookiecutter.repo_name }}/notebooks/1_blank.ipynb
+++ b/{{ cookiecutter.repo_name }}/notebooks/1_blank.ipynb
@@ -31,7 +31,7 @@
     "from src import project_dir\n",
     "\n",
     "# JCG git functions\n",
-    "## updating the functions: pip uninstall mypackages -y   followed by    pip install git+https://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@github.com/jancgreyling/mypackages.git\n",
+    "## updating the functions: pip uninstall mypackages -y   followed by    pip install git+https://<token>@github.com/jancgreyling/mypackages.git\n",
     "with open(os.path.join(project_dir,'src','mypackages_import_all.py'), 'r') as f:\n",
     "    exec(f.read())\n",
     "    \n",
