Updated requirements and example code

--- a/{{ cookiecutter.repo_name }}/notebooks/1_blank.ipynb
+++ b/{{ cookiecutter.repo_name }}/notebooks/1_blank.ipynb
@@ -25,17 +25,13 @@
    ],
    "source": [
     "import os\n",
+    "import sys\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "from src import project_dir\n",
-    "\n",
-    "# JCG git functions\n",
-    "## updating the functions: pip uninstall mypackages -y   followed by    pip install git+https://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@github.com/jancgreyling/mypackages.git\n",
-    "with open(os.path.join(project_dir,'src','mypackages_import_all.py'), 'r') as f:\n",
-    "    exec(f.read())\n",
-    "    \n",
-    "project_dir"
+    "project_dir = os.path.abspath(os.path.join(os.getcwd(), '..'))\n",
+    "sys.path.extend([os.path.abspath(os.path.join(os.getcwd(), '..', 'src')), project_dir])\n",
+    "from config import settings\n"
    ]
   },
   {
